# GoIT_Web_PD_Homework_6_DataBase

./: DB_students.sql  README.md  create_sql.py  fill_sql.py  insert.py  migrate.py  pyproject.toml  query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  query_additional_1.sql  select.py  sql_connect.py  update.py
